ejercicio3_2/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /logoutput
            pathType: Prefix
            backend:
              service:
                name: logoutput-svc
                port:
                  number: 80
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: pingpong-svc
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pingpong-svc
                port:
                  number: 80
